<resources>
    <string name="app_name">MMKuNyiK</string>
    <string name="action_settings">Settings</string>

    <string name="jobposts">Job Posts</string>
    <string name="account_control">Welcome</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="fee">$ 2000</string>
    <string name="job_intro">As a Housekeeper you will be living and working on one of our cruise ships while maintaining the cleanliness of our guest’s rooms and company property....</string>
    <string name="workhours">300 hours</string>
    <string name="worklocation">Pazaudaung</string>
    <string name="appliedperson">2 persons applied</string>

    <!--Township Array-->
    <string-array name="townships_array">

        <item>မရမ်းကုန်း</item>
        <item>ဒလ</item>
        <item>ဗဟန်း</item>
        <item>လမ်းမတော်</item>
        <item>ကျောက်တံတား</item>
        <item>ကြည့်မြင်တိုင်</item>
        <item>အလုံ</item>
        <item>ပန်းဘဲတန်း</item>
        <item>လသာ</item>
        <item>တောင်ဥက္ကလာပ</item>
        <item>အင်းစိန်</item>
        <item>မင်္ဂလာတောင်ညွန့်</item>
        <item>မြောက်ဥက္ကလာပ</item>
        <item>ပုစွန်တောင်</item>
        <item>ဗိုလ်တထောင်</item>
        <item>ကမာရွတ်</item>
        <item>မင်္ဂလာဒုံ</item>
        <item>ရန်ကင်း</item>
        <item>ဒေါပုံ</item>
        <item>ရွှေပြည်သာ</item>
        <item>စမ်းချောင်း</item>
        <item>သင်္ဃန်းကျွန်း</item>
        <item>လှိုင်</item>
        <item>သာကေတ</item>
        <item>တောင်ဒဂုံ</item>
        <item>အရှေ့ဒဂုံ</item>
        <item>ဒဂုံ</item>
        <item>ဒဂုံဆိပ်ကမ်း</item>
        <item>မြောက်ဒဂုံ</item>
        <item>တာမွေ</item>

    </string-array>
</resources>
