<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/margin_small"
    android:layout_margin="@dimen/margin_medium">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_medium">
        <TextView
            android:id="@+id/tvJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housekeeping"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_regular_3x"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"/>
        <TextView
            android:id="@+id/tvJobFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_regular"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_alignTop="@+id/tvJobTitle"
            android:layout_alignBottom="@+id/tvJobTitle"/>
        <TextView
            android:id="@+id/tvJobIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvJobTitle"
            android:layout_alignLeft="@+id/tvJobTitle"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/job_intro"
            android:maxLines="3"
            android:ellipsize="end"/>
        <LinearLayout
            android:id="@+id/lLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvJobIntro"
            android:layout_alignLeft="@+id/tvJobTitle"
            android:layout_marginTop="@dimen/margin_medium"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ivClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_watch_later_grey_24dp"/>
                <TextView
                    android:id="@+id/tvClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivClock"
                    android:text="@string/workhours"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"
                    android:layout_marginLeft="@dimen/margin_small"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ivLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_grey_24dp"/>
                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivLocation"
                    android:text="@string/worklocation"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"
                    android:layout_marginLeft="@dimen/margin_small"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tvPersonApplied"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appliedperson"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:textColor="@color/whiteFull"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_below="@+id/lLayout"
            android:layout_marginBottom="@dimen/margin_medium"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lLayout"
            android:layout_alignParentRight="true"
            android:text="Save"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:background="@drawable/button_border"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>